# Agentic-Email-analyzer

./: README.md  pyproject.toml
src/ai_agent_email_security_analyzer/: crew.py  main.py
src/ai_agent_email_security_analyzer/config/: agents.yaml  tasks.yaml
