[project]
name = "ai_agent_email_security_analyzer"
version = "0.1.0"
description = "ai_agent_email_security_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
ai_agent_email_security_analyzer = "ai_agent_email_security_analyzer.main:run"
run_crew = "ai_agent_email_security_analyzer.main:run"
train = "ai_agent_email_security_analyzer.main:train"
replay = "ai_agent_email_security_analyzer.main:replay"
test = "ai_agent_email_security_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
